# promwatch

./: Cargo.toml  Containerfile  README.md
src/: config.rs  main.rs  metrics.rs  promwatch-config.yaml  tsdb.rs
