[package]
name = "promwatch"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.34"
clap = { version = "4.1", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
axum = "0.7"
prometheus-client = "0.22.3"
